# foreman

./: .gitignore  README.md  pyproject.toml
foreman/: __init__.py  cli.py  config.py  flow.py  router.py
foreman/scoreboard/: db.py  events.py  listener.py
foreman/tui/: app.py
foreman/workers/: base.py  claude_worker.py  codex_worker.py
