[project]
name = "foreman"
version = "0.1.0"
description = "CrewAI project-manager routing subtasks to subscription-backed CLI agents"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "crewai>=1.15.4",
    "textual>=8.2.8",
]

[project.scripts]
foreman = "foreman.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["foreman"]
